[package]
name = "csv_to_postgresql"
version = "0.1.0"
authors = ["Matthew Scheffel <mscheffel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
csv = "1.1"
regex="1"
rpassword = "4.0"
serde = { version = "1", features = ["derive"] }
spmc = "0.3"
postgres = "0.17"
walkdir = "2.3"